--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
     "bootstrap": "^4.3.1",
+    "immutable": "^4.0.0-rc.12",
     "ramda": "^0.26.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
